# lolsummd

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  testing.py  todo.txt
api/: index.py
core/: ddragon_helper.py  endpoint_builder.py  mastery_summarizer.py  riot_api_client.py
models/: account.py  endpoints.py  region.py
static/: champ_ids.json  riot.txt  style.css
static/css/: accounts.css  base.css  form.css  mastery.css  modal.css  responsive.css
static/js/: accounts.js  mastery.js  modal.js  utils.js
templates/: 404.html  about.html  base.html  error.html  help.html  index.html
util/: cache_interface.py  clogger.py  ddragon_helper.py  json_cache.py  response_helper.py  riot_api_client.py  time_helper.py
util/cache/: cache_interface.py  json_cache.py  redis_cache.py
